Added demo mode restrictions

--- a/Orderly.Client/wwwroot/appsettings.json
+++ b/Orderly.Client/wwwroot/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppName": "Orderly",
   "ApiBaseUrl": "https://localhost:7275",
+  "DemoMode": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
