Redesigned home page and main layout

--- a/Orderly.Client/Orderly.Client.csproj
+++ b/Orderly.Client/Orderly.Client.csproj
@@ -21,4 +21,8 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="npx tailwindcss -i ./wwwroot/css/site.css -o ./wwwroot/css/output.css --minify --config ./tailwind.config.js&#xA;" />
+  </Target>
+
 </Project>
