--- a/Orderly.Server/Orderly.Server.csproj
+++ b/Orderly.Server/Orderly.Server.csproj
@@ -26,4 +26,6 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://www.schemastore.org/appsscript.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
